data/collection/fixes/descriptions/java/JDK-8256266
Consider this code:
---
public class B {
     public void test(Object o) {
         if (o instanceof @Deprecated String s) {}
     }
}
---
This produces:
---
/tmp/B.java:3: error: annotation @Deprecated not applicable in this type context
         if (o instanceof @Deprecated String s) {}
                          ^
1 error
---

That is not correct, declaration annotations are currently allowed on the binding variables.